// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`basic.hbs format 1`] = `
====================================options=====================================
parsers: ["glimmer"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
{{*foo}}

{{#helper}}{{*decorator}}{{/helper}}

{{#helper}}{{*decorator foo}}{{/helper}}

=====================================output=====================================
{{*foo}}

{{#helper}}{{*decorator}}{{/helper}}

{{#helper}}{{*decorator foo}}{{/helper}}
================================================================================
`;

exports[`root.hbs format 1`] = `
====================================options=====================================
parsers: ["glimmer"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
{{*decorator "success"}}

=====================================output=====================================
{{*decorator "success"}}
================================================================================
`;
